WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302625
MediaPlayerPrivateMediaSourceAVFObjC can't be instantiated in the content process.
https://bugs.webkit.org/show_bug.cgi?id=302625
Summary
MediaPlayerPrivateMediaSourceAVFObjC can't be instantiated in the content pro...
Jean-Yves Avenard [:jya]
Reported
2025-11-16 23:06:42 PST
The MediaPlayerPrivateMediaSourceAVFObjC can no longer be instantiated in the web content process following its move to the GPU process.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-16 23:06:48 PST
<
rdar://problem/164861750
>
Jean-Yves Avenard [:jya]
Comment 2
2025-11-16 23:15:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54034
EWS
Comment 3
2025-11-17 19:15:43 PST
Committed
303158@main
(532d7508c574): <
https://commits.webkit.org/303158@main
> Reviewed commits have been landed. Closing PR #54034 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug